# server_test

./: .gitignore  Dockerfile  data.proto  flake.nix  frb_build.sh  frb_init.sh  protobuf.sh  shell.nix
bash/: build_linux.py  build_linux.sh  build_linux_server.sh  clean.py  clean.sh  docker.sh  flutter.py  helpers.py  launch_linux.sh  mobx.py  protobuf.sh  protoc.py  rust.py  task.py
client/: .gitattributes  .gitignore  .metadata  analysis_options.yaml  build.dart  build.yaml  protobuf.sh  pubspec.yaml
client/lib/: connection.dart  main.dart  rust_ffi.dart  save.dart  saves.dart  user.dart  user_registry.dart  w_add_user.dart  w_emoji_selector.dart  w_mobx_counter.dart  w_user_register.dart  w_user_screen.dart  w_user_tile.dart  w_users_registry.dart
client/linux/: .gitattributes  CMakeLists.txt
client/linux/flutter/: generated_plugins.cmake
client/rust_builder/: pubspec.yaml
client/rust_builder/android/: build.gradle
client/rust_builder/android/src/main/: AndroidManifest.xml
client/rust_builder/ios/: rust_lib_client.podspec
client/rust_builder/linux/: CMakeLists.txt
client/rust_builder/macos/: rust_lib_client.podspec
client/rust_builder/windows/: CMakeLists.txt
proto/: .clang-format  authentication.proto  data.proto  empty.proto  gamestate.proto
scripts/: frb_build.sh  frb_init.sh  protobuf.sh  rm_generated.sh
server/: Cargo.toml  build.rs  rustfmt.toml
server/src/: available_port.rs  bank.rs  clicker.rs  data.rs  events.rs  frb_generated.rs  grpc.rs  ingame_types.rs  lib.rs  local_server.rs  main.rs  mo_services.rs  multicast.rs  mutcell.rs  observer.rs  pb.rs  runtime.rs  services.rs  user_data.rs
server/src/mo_server/: bank.rs  clicker.rs  local_server.rs  mod.rs  multicast.rs  mutcell.rs  observer.rs  observer2.txt  services.rs  user_data.rs
