[package]
name = "moreonigiri_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "moreonigiri_server"

[dependencies]
anyhow = "1.0.89"
atty = "0.2.14"
base64 = "0.22.1"
flutter_rust_bridge = "=2.4.0"
futures-util = "0.3.31"
log = "0.4.22"
paste = "1.0.15"
prost = { version = "0.13.3", default-features = false, features = [
    "prost-derive",
] }
prost-types = { version = "0.13.3", default-features = false }
rand = "0.8.5"
sha2 = "0.10.8"
simplelog = "0.12.2"
time = "0.3.36"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
tonic-reflection = { version = "0.12.3", features = ["prost-types", "server"] }

[build-dependencies]
prost-build = "0.13.3"
tonic-build = "0.12.3"

[profile.release]
opt-level = 3
